# BCForth

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SimpleMFCApplication — skrót .lnk  SimpleMFCApplication.exe — skrót .lnk  partitions.csv  sdkconfig  sdkconfig.old
add_ons/: AddOns.txt
doc/: ReadMe.txt
examples/: AD_Measurement.txt  CMakeLists.txt  Debug.txt  Debug2222.txt  Debug_line_counter.txt  ErathoSieve.txt  ErathoSieveEx.txt  Factorial.txt  Fibo.txt  ForthExamples.txt  ForthExamples_2.txt  Postpone.txt  QuadEq.txt  QuadEqVars.txt  Sort_by_AI.txt  VectoredExecution.txt  if_else_test.txt  test.txt  variable.txt
examples/0af60976b4df8eb7ab8eff98a16b06c6-1e0d4ae26c193856263d0374e54f402d55c85ede/: Blinking-led.forth
include/: BaseDefinitions.h  CMakeLists.txt  Forth.h  ForthCompiler.h  ForthInterpreter.h  TheStack.cppm
include/Auxiliary/: CMakeLists.txt  TheStack.cppm  xTheStack.cppm
include/ESP32/: ESP32_config.h
include/Interfaces/: CMakeLists.txt  Interfaces.h  Tokenizer.h
include/Modules/: CMakeLists.txt  CoreModule.h  FP_Module.h  FiberRoutines.h  Modules.h  RandModule.h  StringModule.h  TimeModule.h
include/Words/: CMakeLists.txt  StructWords.h  SystemWords.h  Words.h
main/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
